--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
-विमोह त्यागून कर्मफलांचा सिद्ध होई पार्था,
-कर्तव्याने घडतो माणूस जाणून पुरुषार्था
+<a href="/sitemap/">Sitemap</a> <br>
+<p><small>विमोह त्यागून कर्मफलांचा सिद्ध होई पार्था, <br>
+कर्तव्याने घडतो माणूस जाणून पुरुषार्था <br></small></p>
 <!-- end custom footer snippets -->
